fix: `ProductGallery` spacing

--- a/packages/core/src/components/sections/ProductGallery/section.module.scss
+++ b/packages/core/src/components/sections/ProductGallery/section.module.scss
@@ -1,4 +1,8 @@
 .section {
+  @include media("<notebook") {
+    margin-top: 0;
+  }
+
   @import "@faststore/ui/src/components/atoms/Badge/styles.scss";
   @import "@faststore/ui/src/components/atoms/Button/styles.scss";
   @import "@faststore/ui/src/components/atoms/Checkbox/styles.scss";
