--- a/packages/core/src/components/sections/Section/section.scss
+++ b/packages/core/src/components/sections/Section/section.scss
@@ -5,3 +5,10 @@
     margin-bottom: var(--fs-spacing-3);
   }
 }
+
+.section__divisor {
+  padding-top: var(--fs-spacing-5);
+  border-top: var(--fs-border-width) solid var(--fs-border-color-light);
+
+  @include media(">=notebook") { padding-top: var(--fs-spacing-8); }
+}
